# Agri-Smart

./: .gitignore  Readme.md
backend/: LOGGING_README.md  README.md  pyproject.toml  railway.json  requirements.txt  test_logging.py
backend/src/: flows.py  logging_config.py  main.py  test.py
backend/src/agent_flows/: fertilizer_agent_flow.py
backend/src/auth/: auth_utils.py
backend/src/core/: crop_health_api.py  model_tflite.py  soil_api.py  vgg16_keras.py  vgg16_tflite.py  weather_api.py
backend/src/db/: __init__.py  chat_models.py  user_model.py
backend/src/ext_apis/: crop_health_api.py  soil_api.py  weather_api.py
backend/src/middleware/: __init__.py  logging_middleware.py
backend/src/models/: chat.py  model.tflite
backend/src/routes/: agent_planner.py  chat.py  crop_health.py  fertilizer_agent.py  monitoring.py  recommend.py  soil_data.py  soilgrids.py  user.py  weather_forecast.py
backend/src/services/: audio_service.py  chat_service.py  confidence_scorer.py  gemini_service.py  llm_service.py  transalation_service.py  tts_service.py  web_search_service.py
backend/src/utils/: __init__.py  logging_utils.py
frontend/: LAND_MAPPING.md  generate-ssl.js  package-lock.json  package.json  server.js
frontend/src/: App.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/auth-options/: page.tsx
frontend/src/app/land-mapping/: page.tsx
frontend/src/components/: ImagePredictor.tsx
frontend/src/contexts/: AuthContext.tsx  LanguageContext.tsx
frontend/src/lib/: api.ts
frontend/src/utils/: sensors.ts
(+15 files in other folders)
